Fixed Drawer isssue, revertedto not responsive UI

--- a/src/app/components/GradientAnimation.css
+++ b/src/app/components/GradientAnimation.css
@@ -93,6 +93,7 @@
 .mic-button img {
   position: absolute;
   transition: opacity 0.3s ease;
+  scale: 0.4;
 }
 
 .mic-button .mic-white {
